# mcp-vnc

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.cpp  tools.cpp  tools.h
.github/workflows/: appimage.yml  docker.yml  macos.yml  release.yml
src/: CMakeLists.txt  main.cpp  tools.cpp  tools.h  vncwidget.cpp  vncwidget.h
